--- a/index.html
+++ b/index.html
@@ -594,26 +594,26 @@
             </li>
           </ul>
         </div>
-      </div>
-      <div class="footer-subscribe">
-        <p class="footer-subscribe-text">Subscribe</p>
-        <form class="subscribe-form">
-          <label class="subscribe-label" for="subscribe">
-            <input
-              id="subscribe"
-              class="footer-input"
-              type="email"
-              placeholder="E-mail"
-              name="subscribe"
-            />
-          </label>
-          <button type="submit" class="footer-subscribe-btn">
-            Subscribe
-            <svg width="24" height="24" class="icon-send">
-              <use href="./images/icons.svg#icon-send"></use>
-            </svg>
-          </button>
-        </form>
+        <div class="footer-subscribe">
+          <p class="footer-subscribe-text">Subscribe</p>
+          <form class="subscribe-form">
+            <label class="subscribe-label" for="subscribe">
+              <input
+                id="subscribe"
+                class="footer-input"
+                type="email"
+                placeholder="E-mail"
+                name="subscribe"
+              />
+            </label>
+            <button type="submit" class="footer-subscribe-btn">
+              Subscribe
+              <svg width="24" height="24" class="icon-send">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
     <div class="backdrop is-open">
@@ -631,7 +631,7 @@
             <label for="user-name" class="review-form-field-label">Name</label>
             <div class="review-form-input-wrapper">
               <input
-                type="name"
+                type="text"
                 class="review-form-input"
                 name="user-name"
                 id="user-name"
@@ -652,7 +652,7 @@
             >
             <div class="review-form-input-wrapper">
               <input
-                type="phone"
+                type="tel"
                 class="review-form-input"
                 name="user-phone"
                 id="user-phone"
@@ -702,12 +702,12 @@
             <input
               type="checkbox"
               class="review-form-privacy-checkbox visually-hidden"
-              name="privacy-policy"
-              id="privacy-policy"
+              name="user-privacy"
+              id="user-privacy"
               value="true"
               required
             />
-            <label for="privacy-policy" class="review-form-checkbox-label">
+            <label for="user-privacy" class="review-form-checkbox-label">
               <span class="review-form-own-checkbox">
                 <svg
                   class="rewiew-form-own-checkbox-icon"
